--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python: 
 - 3.6
 install:
-- pip install pipenv --dev
-- pipenv install
+- pip install pipenv
+- pipenv install --dev
 script:
 - pipenv check
