Fixed typo in Travis CI command to fix build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ script:
 - pipenv run pybabel extract -F babel.cfg -o messages.pot .
 - pipenv run pybabel update -i messages.pot -d translations
 - pipenv run pybabel compile -d translations
-- pypenv run python freezer.py
+- pipenv run python freezer.py
 - pylint pycon.py
 - pipenv check
