--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: 
-- 3.6
+- 3.7
 install:
 - pip install pipenv
 - pipenv install --dev
@@ -10,4 +10,7 @@ script:
 - pipenv run pybabel compile -d translations
 - pipenv run python freezer.py
 - pylint pycon.py
-- pipenv check
+# - pipenv check
+notifications:
+  slack: slovakpython:VrA4XJVmBVRsL5eCfDdE1cAr
+    on_success: change
