Updated Pipenv to Python 3.7 and travis build to this version (should fix broken build)

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 - pipenv run pybabel compile -d translations
 - pipenv run python freezer.py
 - pylint pycon.py
-# - pipenv check
+- pipenv check
 notifications:
   slack: slovakpython:VrA4XJVmBVRsL5eCfDdE1cAr
     on_success: change
