Run PyLint within the Pipenv

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - pipenv run pybabel update -i messages.pot -d translations
   - pipenv run pybabel compile -d translations
   - pipenv run python freezer.py
-  - pylint pycon.py
+  - pipenv run pylint pycon.py
   - pipenv check
 notifications:
   slack: slovakpython:VrA4XJVmBVRsL5eCfDdE1cAr
